Attempting to fix layout issue on mobile.

--- a/css/app.css
+++ b/css/app.css
@@ -12,7 +12,7 @@ main {
   width: 100%;
 }
 
-header {
+p {
   color: white;
   font-family: sans-serif;
   font-size: xx-large;
